# FANZ-Unified-Ecosystem

./: .cpanel.yml  .dockerignore 2  .editorconfig  .env 4.production  .env.container.example  .env.example  .env.production.example  .envrc  .eslintrc.js  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .npmrc  .prettierrc.js  .security-fixes.json  ADDON_SYSTEM_COMPLETE.md  ADULT-FRIENDLY-HOSTING.md  AI_INTEGRATION_SUMMARY.md  API 3.md  API.md  BLACKLIST_SYSTEM_COMPLETE.md  BOYFANZ_FIX.md  BUILD_STATUS.md  CODEBASE_FIXES_SUMMARY.md  CODEBASE_HEALTH_REPORT.md  CONTAINER_SETUP 2.md  CPANEL_DEPLOYMENT_GUIDE.md  CROSSPOSTING_DEPLOYMENT_COMPLETE.md  CROSSPOSTING_DEPLOYMENT_STATUS.md  CROSSPOSTING_FEATURES_GUIDE.md  DATABASE_COMPLETE.md  DATABASE_FINAL_STATUS.md  DEPENDENCY_ISSUES.md  DEPLOYMENT 4.md  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_QUICKSTART.md  (+142 more)
.github/: dependabot.yml
FANZ-AI-Ecosystem/: .envrc  .mise.toml  DEPLOYMENT-GUIDE.md  DEPLOYMENT-READY.md  FANZ-AI-ECOSYSTEM-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  docker-compose.dev.yml  package.json  pnpm-workspace.yaml
FANZ-Unified-Ecosystem/: .cpanel.yml  .gitattributes  .gitignore  BOYFANZ_FIX.md  CREATOR_STORY_FIELD_DEPLOYMENT.md  CROSSPOSTING_COMPONENTS_COMPLETE.md  CROSSPOSTING_DEPLOYMENT_GUIDE.md  CROSSPOSTING_DEPLOYMENT_SUMMARY.md  CROSSPOSTING_FRONTEND_IMPLEMENTATION.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  ECOSYSTEM_WIDE_CROSSPOSTING_DEPLOYMENT.md  FANZ_COMPLETE_ARCHITECTURE.md  FANZ_ECOSYSTEM_MAP_COMPLETE.md  FANZ_UNIFIED_ARCHITECTURE_V2.md  MANUAL_DEPLOYMENT_INSTRUCTIONS.md  QUEUE_WORKER_TROUBLESHOOTING.md  REBRANDING_COMPLETE_SUMMARY.md  SUPAB ASE_SETUP_GUIDE.md  SUPABASE_ANALYSIS.md  SUPABASE_DEPLOYMENT_GUIDE.md  WHM_CPANEL_DEPLOYMENT_GUIDE.md  new-mac-setup.sh  package.json  platform-router.js  render.yaml
ai-automation/: Phase5IntegrationHub 2.ts
ai-content-intelligence/: ContentDNASystem 2.ts  ContentDNASystem 3.ts  ContentDNASystem 4.ts  ContentDNASystem.ts  CreatorCopilotAI 4.ts  CreatorCopilotAI.ts  PersonalizationEngine 2.ts  PersonalizationEngine 4.ts  PersonalizationEngine.ts  content-dna-system.ts  creator-copilot.ts
api-gateway/: Dockerfile  package.json  server 2.ts  server.js  server.ts  tsconfig.json
argocd-apps/: golden-api-app.yaml
auth-service/: .env.example  Dockerfile 2  README.md  package-lock.json  package.json  package.json         # (edit: add dependencies if not present) 2  tsconfig.json
backend/: .env.example  .env.production  .env.test  ACTIVITY_MONITORING_COMPLETE 2.md  ACTIVITY_MONITORING_COMPLETE.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  COMMIT_MESSAGE 2.md  DEPLOYMENT_COMPLETE.md  Dockerfile  ENHANCED_VENDOR_MANAGEMENT_SUMMARY 2.md  PAYMENT_PROCESSING_COMPLETE.md  PRODUCTION_DEPLOYMENT 2.md  PRODUCTION_READY.md  README.md  SECURITY_FIXES_SUMMARY 2.md  TESTING_FRAMEWORK 2.md  VENDOR_ACCESS_WORKING_SYSTEM 2.md  VENDOR_ACCESS_WORKING_SYSTEM.md  auth-server 2.js  auth-server.js  deploy.sh  docker-compose.yml  enhanced-auth-server 2.js  enhanced-auth-server.js  enhanced-server.js  fix-unknown-types.js  fix-unused-vars.js  jest.config.js  jest.config.old.js  k8s-deployment.yaml  package-lock.json  package.json  simple-db 2.js  simple-db-v2.js  simple-server.js  tsconfig.json  working-server.js
bearfanz/: API_GATEWAY_STATUS.md  APPROVED_UI_BACKUP.md  CHANGELOG.md  DEPLOYMENT_FIX_SUMMARY.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  SECURITY.md  create-admin-direct.sql  create-admin-simple.js  docker-compose.yml  frontend-theme-config.ts  replit.md
blockchain/: CreatorTokenEconomy 4.ts  Web3IntegrationHub.ts  creator-token-system.sol  hardhat.config.js  package.json
boyfanz/: GITHUB_ACTIONS_SETUP.md  UNDERGROUND_AESTHETIC_COMPLETE.md  package.json
cougarfanz/: package.json  vercel.json
database/: .env.development  EXTENSIONS_ENABLED.md  README.md  TABLE_REFERENCE.md  docker-compose.yml  init_all_schemas.sql  migrate.ts  schema.sql  seed_data.sql  seed_discrete_data.sql  setup.sh  setup_roles.sql  supabase-types.ts  unified-schema.sql  verify_schemas.sql
demo/: fanz-demo 3.html
dilffanz/: package.json
dlbroz/: APPROVED_UI_BACKUP.md  CHANGELOG.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DATABASE_SCHEMA_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  IMMEDIATE_NEXT_STEPS.md  QUICK_START.md  (+3 more)
(+3952 files in other folders)
